<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_Join_in">I want to join</string>
    <string name="about_thanks_songer">Sagar Rastogi, Satyaki Chakraborti, Balaji, Suvraneel Bhuin, Ganesh Nayak</string>
    <string name="account_auth_provider">com.ushowmedia.mipha.ashes.provider</string>
    <string name="account_type">com.ushowmeida.mipha.ashes</string>
    <string name="accountkit_client_id">6903d72b52a5ce1f02e5f40652a90541</string>
    <string name="add_to_download">Added to Downloads</string>
    <string name="add_to_fav_songs">Added to My Favorites Songs</string>
    <string name="add_to_playlist">Add Playlist</string>
    <string name="add_to_queue">Add Queue</string>
    <string name="added_to_download">Added to Download</string>
    <string name="ak_login_protocol_scheme">ak213560439114</string>
    <string name="album">album</string>
    <string name="albums">albums</string>
    <string name="albums_and_playlists">PlayLists &amp; Albums</string>
    <string name="already_downloaded">The download task already complete</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">user</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appsflyer_dev_key">zdzeSYnTy8NrdVUiTASQoE</string>
    <string name="artists">artists</string>
    <string name="audio_effect">Audio Effect</string>
    <string name="audio_effect_3d_audio">3D Audio</string>
    <string name="audio_effect_clear_voice">Voice Booster</string>
    <string name="audio_effect_low_stress">Bass Booster</string>
    <string name="audio_effect_luxuriant">Retro</string>
    <string name="audio_effect_off">Off</string>
    <string name="audio_effect_the_rhythm">Reverb</string>
    <string name="audio_effect_warm_and_soft">Soft</string>
    <string name="audio_effect_wide_sound">Deep</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="change_order">Change Order</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_files">Check Files</string>
    <string name="check_files_tips">Downloaded songs are only available in Solo Music app. Invite friends to install Solo Music for sharing songs.</string>
    <string name="check_in_info">"1. Check in every day to get coins.
2. Continuously check in for extra bonus!
3. If you didn't check in on any particular day, then you have to start with 1 coin a day"</string>
    <string name="check_vip_features">Check VIP features</string>
    <string name="choose_language">Choose language</string>
    <string name="clear_play_list_alert">Are you sure you want to clear the queue?</string>
    <string name="com_accountkit_account_verified">Account verified!</string>
    <string name="com_accountkit_button_begin">Begin</string>
    <string name="com_accountkit_button_cancel">Cancel</string>
    <string name="com_accountkit_button_confirm">Confirm</string>
    <string name="com_accountkit_button_continue">Continue</string>
    <string name="com_accountkit_button_edit">EDIT</string>
    <string name="com_accountkit_button_log_in">Log In</string>
    <string name="com_accountkit_button_next">Next</string>
    <string name="com_accountkit_button_ok">OK</string>
    <string name="com_accountkit_button_resend_code_in">Send SMS Again in %1$d</string>
    <string name="com_accountkit_button_resend_sms">Send SMS Again</string>
    <string name="com_accountkit_button_send">Send</string>
    <string name="com_accountkit_button_send_code_in_call">Get a Call</string>
    <string name="com_accountkit_button_send_code_in_call_details">Get your code in a voice call</string>
    <string name="com_accountkit_button_send_code_in_call_from_facebook_details">Get your code in a voice call from Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb">Get a Code on Facebook</string>
    <string name="com_accountkit_button_send_code_in_fb_details">Code will arrive as a Facebook notification</string>
    <string name="com_accountkit_button_start">Start</string>
    <string name="com_accountkit_button_start_over">Try Again</string>
    <string name="com_accountkit_button_submit">Submit</string>
    <string name="com_accountkit_check_email">Open your Email</string>
    <string name="com_accountkit_code_sent_to">Verify your mobile number %1$s</string>
    <string name="com_accountkit_confirmation_code_agreement">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a> and &lt;a href=%4$s>cookie use&lt;/a>."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> of %6$s."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> and &lt;a href=%6$s>Terms of Service&lt;/a> of %7$s."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_and_terms_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> and &lt;a href=%6$s>Terms of Service&lt;/a> of %7$s. &lt;a href=%8$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_agreement_app_privacy_policy_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a>, &lt;a href=%4$s>cookie use&lt;/a> and the &lt;a href=%5$s>Privacy Policy&lt;/a> of %6$s. &lt;a href=%7$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_agreement_instant_verification">"Tap %1$s to accept Facebook's &lt;a href=%2$s>Terms&lt;/a>, &lt;a href=%3$s>Data Policy&lt;/a> and &lt;a href=%4$s>cookie use&lt;/a>. &lt;a href=%5$s>Learn more&lt;/a> about how your account was verified."</string>
    <string name="com_accountkit_confirmation_code_text">"I didn't get a code"</string>
    <string name="com_accountkit_confirmation_code_title">Enter your code</string>
    <string name="com_accountkit_email_invalid">This email is incorrect. Please try again.</string>
    <string name="com_accountkit_email_loading_title">Verifying your email address …</string>
    <string name="com_accountkit_email_login_retry_title">Confirm your email</string>
    <string name="com_accountkit_email_login_text">"Tap %1$s to get an email confirmation from Account Kit by Facebook to help you use %2$s. You don't need a Facebook account to use it. &lt;a href=%3$s>Learn how Facebook uses your info&lt;/a>."</string>
    <string name="com_accountkit_email_login_title">Enter your email address</string>
    <string name="com_accountkit_email_not_received">Resend Email</string>
    <string name="com_accountkit_email_verify_title">Open the email and confirm your email address</string>
    <string name="com_accountkit_enter_code_sent_to">Enter the code that was sent to %1$s</string>
    <string name="com_accountkit_error_title">A system issue occurred. Please try again.</string>
    <string name="com_accountkit_facebook_code_entry_title">Enter your code from Facebook</string>
    <string name="com_accountkit_logging_in">Logging in…</string>
    <string name="com_accountkit_other_ways_to_get_code">Other ways to get code:</string>
    <string name="com_accountkit_phone_error_title">Please enter a valid mobile number.</string>
    <string name="com_accountkit_phone_loading_title">Verifying your number…</string>
    <string name="com_accountkit_phone_login_retry_title">Confirm your mobile number</string>
    <string name="com_accountkit_phone_login_text">Tap %1$s to verify your account with Account Kit powered by Facebook. You don’t need a Facebook account to use Account Kit. An SMS may be sent to verify your number. Message and data rates may apply. &lt;a href=%2$s>Learn how Facebook uses your info&lt;/a>.</string>
    <string name="com_accountkit_phone_login_title">Enter your mobile number</string>
    <string name="com_accountkit_phone_sending_code_on_fb_title">Sending code on Facebook…</string>
    <string name="common_text_cancel">Cancel</string>
    <string name="common_text_confirm">Confirm</string>
    <string name="common_text_get_started">Get Started</string>
    <string name="common_text_save">Save</string>
    <string name="common_text_see_all">See All</string>
    <string name="common_text_skip">Skip</string>
    <string name="hour_hint">h</string>
    <string name="minute_hint">min</string>
    <string name="text_about_me">About Me</string>
    <string name="text_check_in">Check In</string>
    <string name="text_daily_check_in">Daily Check In</string>
    <string name="text_desc_check_in">Check in every day to collect coins</string>
    <string name="text_get_more">get more</string>
    <string name="text_information">Information</string>
    <string name="text_present_balance">Present balance</string>
    <string name="text_sleep_timer">Sleep Timer</string>
    <string name="text_song_language">Song Language</string>
    <string name="text_title_activity_profile_edit">Edit Profile</string>
    <string name="text_title_notes">Notes</string>
    <string name="text_username">Nickname</string>
    <string name="tip_choose_language">Choose the language you want to listen to and we will recommend it based on your choice.</string>
</resources>