<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_color_white_primary" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/common_text_level_6" android:textStyle="bold" android:textColor="@color/common_color_black_primary" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_sleep_timer" />
    <LinearLayout android:orientation="horizontal" android:id="@id/time_picker" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip">
        <com.ushowmedia.korok.view.NumberPickerView android:id="@id/picker_hour" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="8.0dip" app:dividerColor="@color/common_base_color" app:hintText="@string/hour_hint" app:itemPaddingHorizontal="5.0dip" app:itemPaddingVertical="5.0dip" app:showCount="3" app:textColorNormal="@color/common_color_black_primary_a20" app:textColorSelected="@color/common_color_black_primary" app:textSizeNormal="@dimen/common_text_level_7" app:textSizeSelected="@dimen/common_text_level_8" app:wrapSelectorWheel="true" />
        <com.ushowmedia.korok.view.NumberPickerView android:id="@id/picker_minute" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="8.0dip" app:dividerColor="@color/common_base_color" app:hintText="@string/minute_hint" app:itemPaddingHorizontal="5.0dip" app:itemPaddingVertical="5.0dip" app:showCount="3" app:textColorNormal="@color/common_color_black_primary_a20" app:textColorSelected="@color/common_color_black_primary" app:textSizeNormal="@dimen/common_text_level_7" app:textSizeSelected="@dimen/common_text_level_8" app:wrapSelectorWheel="true" />
    </LinearLayout>
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/common_text_level_4" android:textColor="@color/common_base_color" android:gravity="center" android:id="@id/tv_cancel" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_text_cancel" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" />
        <TextView android:textSize="@dimen/common_text_level_4" android:textColor="@color/common_base_color" android:gravity="center" android:id="@id/tv_confirm" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_text_confirm" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" android:layout_marginStart="8.0dip" />
    </LinearLayout>
</LinearLayout>
