<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:id="@id/appbar" android:background="@color/common_background_activity" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/text_daily_check_in" style="@style/CommonToolbarStyle" />
    </android.support.design.widget.AppBarLayout>
    <com.ushowmedia.korok.view.container.ContentContainer android:id="@id/content_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:background="@color/common_color_gray_a20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip">
                    <LinearLayout android:orientation="horizontal" android:id="@id/download_coin_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13.0dip">
                        <TextView android:textSize="@dimen/common_text_level_2" android:textColor="@color/common_color_gray" android:layout_gravity="center_vertical" android:id="@id/text_download_coin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_present_balance" />
                        <ImageView android:layout_gravity="center_vertical" android:id="@id/img_question" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_margin="2.0dip" android:src="@drawable/icon_item_question_gray" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="15.0dip" android:layout_below="@id/download_coin_container">
                        <ImageView android:layout_gravity="center_vertical" android:id="@id/icon_download_coin" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/icon_download_coin_small" />
                        <TextView android:textSize="32.0sp" android:layout_gravity="center_vertical" android:id="@id/text_coin_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="4.0dip" />
                    </LinearLayout>
                    <TextView android:textColor="@color/common_color_blue" android:id="@id/text_get_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_get_more" android:layout_centerVertical="true" android:textAllCaps="true" android:layout_marginEnd="18.0dip" android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <com.ushowmedia.mipha.setting.checkin.CheckInView android:id="@id/check_in_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" />
                <Button android:textSize="18.0sp" android:textColor="@color/check_in_btn_text_color" android:gravity="center" android:id="@id/btn_check_in" android:background="@drawable/bg_check_in_btn" android:paddingTop="13.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="42.0dip" android:text="@string/text_check_in" android:textAllCaps="true" android:layout_marginStart="45.0dip" android:layout_marginEnd="45.0dip" />
                <TextView android:textSize="13.0sp" android:textStyle="bold" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/text_title_notes" android:paddingStart="18.0dip" />
                <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/check_in_info" android:lineSpacingExtra="6.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" />
            </LinearLayout>
        </ScrollView>
    </com.ushowmedia.korok.view.container.ContentContainer>
</LinearLayout>
