<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ushowmedia.korok.view.WaterFallCardView android:id="@id/waterfall" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/common_background_activity">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/text_song_language" style="@style/CommonToolbarStyle">
            <RelativeLayout android:layout_gravity="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="18.0dip">
                <TextView android:textSize="@dimen/common_text_content_primary" android:textColor="@color/common_base_color" android:id="@id/tv_skip" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_text_skip" android:layout_centerInParent="true" android:textAllCaps="true" />
                <TextView android:textSize="@dimen/common_text_content_primary" android:textColor="@color/common_base_color" android:id="@id/tv_save_top" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_text_save" android:layout_centerInParent="true" android:textAllCaps="true" />
                <android.support.v4.widget.ContentLoadingProgressBar android:id="@id/progress" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_centerInParent="true" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </com.ushowmedia.korok.view.WaterFallCardView>
    <android.support.v4.widget.SwipeRefreshLayout android:id="@id/layout_refresh" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/waterfall">
        <com.ushowmedia.korok.view.CommonScrollView android:id="@id/view_scroll" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/bottom_player_height" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                <TextView android:textSize="@dimen/common_text_level_4" android:textColor="@color/common_color_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/tip_choose_language" android:lineSpacingExtra="4.0dip" />
                <com.google.android.flexbox.FlexboxLayout android:id="@id/layout_language" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" app:flexWrap="wrap" app:justifyContent="space_between" />
            </LinearLayout>
        </com.ushowmedia.korok.view.CommonScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <View android:background="@color/common_divider_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:textSize="@dimen/common_text_level_7" android:textStyle="bold" android:textColor="@color/common_base_color" android:gravity="center" android:id="@id/tv_save" android:background="@color/common_background_activity" android:layout_width="fill_parent" android:layout_height="56.0dip" android:text="@string/common_text_get_started" />
    </LinearLayout>
</RelativeLayout>
