<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:orientation="vertical" android:id="@id/iv_effect_container" android:background="@drawable/bg_sound_effect_dialog" android:paddingTop="4.0dip" android:paddingBottom="31.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/audio_effect_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip">
        <TextView android:textSize="@dimen/common_text_level_5" android:textColor="@color/common_color_black_primary" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="11.0dip" android:text="@string/audio_effect" android:lines="1" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/common_text_level_3" android:textColor="@color/common_base_color" android:ellipsize="end" android:id="@id/effect_see_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="11.0dip" android:text="@string/common_text_see_all" android:lines="1" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/audio_effect_none" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginBottom="12.0dip" app:layout_constraintEnd_toStartOf="@id/audio_effect_3d_audio" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/audio_effect_title">
        <ImageView android:id="@id/img_audio_effect_none" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="fitXY" />
        <TextView android:textSize="10.0dip" android:textColor="@color/detail_audio_effect_text_color" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/audio_effect_off" android:lines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/audio_effect_3d_audio" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginBottom="12.0dip" app:layout_constraintEnd_toStartOf="@id/audio_effect_clear" app:layout_constraintStart_toEndOf="@id/audio_effect_none" app:layout_constraintTop_toBottomOf="@id/audio_effect_title">
        <ImageView android:id="@id/img_audio_effect_3d_audio" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="fitXY" />
        <TextView android:textSize="10.0dip" android:textColor="@color/detail_audio_effect_text_color" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/audio_effect_3d_audio" android:lines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/audio_effect_clear" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginBottom="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/audio_effect_3d_audio" app:layout_constraintTop_toBottomOf="@id/audio_effect_title">
        <ImageView android:id="@id/img_audio_effect_clear" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="fitXY" />
        <TextView android:textSize="10.0dip" android:textColor="@color/detail_audio_effect_text_color" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/audio_effect_clear_voice" android:lines="1" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
