<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/text_title_activity_profile_edit" style="@style/CommonToolbarStyle">
        <android.support.constraint.ConstraintLayout android:layout_gravity="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="18.0dip">
            <TextView android:textSize="@dimen/common_text_content_primary" android:textColor="@color/common_base_color" android:id="@id/tv_save" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_text_save" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <android.support.v4.widget.ContentLoadingProgressBar android:id="@id/progress" android:layout_width="25.0dip" android:layout_height="25.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>
    <TextView android:textSize="@dimen/common_text_title_secondary" android:textStyle="bold" android:textColor="@color/common_text_color_primary" android:id="@id/tv_title" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_information" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <android.support.constraint.ConstraintLayout android:gravity="end|center" android:orientation="horizontal" android:id="@id/layout_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title">
        <com.ushowmedia.korok.view.AvatarView android:id="@id/iv_avatar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AvatarView.Middle" />
        <com.ushowmedia.korok.view.TextInputView android:id="@id/edt_username" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginEnd="15.0dip" app:error_enable="false" app:hint="@string/text_username" app:layout_constraintEnd_toStartOf="@id/iv_avatar" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <com.ushowmedia.korok.view.DisplayPickerView android:id="@id/view_gender" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintTop_toBottomOf="@id/layout_username" />
    <com.ushowmedia.korok.view.DisplayTextView android:id="@id/tv_birthday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintTop_toBottomOf="@id/view_gender" />
    <com.ushowmedia.korok.view.TextInputView android:id="@id/edt_bio" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:error_enable="false" app:hint="@string/text_about_me" app:layout_constraintTop_toBottomOf="@id/tv_birthday" />
</android.support.constraint.ConstraintLayout>
