<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_background_activity" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/common_text_level_6" android:textStyle="bold" android:textColor="@color/common_text_color_primary" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_daily_check_in" />
        <TextView android:textSize="@dimen/common_text_level_5" android:textColor="@color/common_color_gray" android:id="@id/tv_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/text_desc_check_in" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="6.0dip">
            <com.ushowmedia.mipha.setting.checkin.CheckInView android:id="@id/check_in_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <com.ushowmedia.mipha.setting.checkin.CheckInResultView android:id="@id/check_in_result_view" android:background="@drawable/bg_shadow_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
    <View android:id="@id/view_divider" android:background="@color/common_divider_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <TextView android:textSize="@dimen/common_text_level_5" android:textColor="@color/common_base_color" android:gravity="center" android:id="@id/tv_check_in" android:background="@color/common_color_white_primary" android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_check_in" android:textAllCaps="true" />
</LinearLayout>
